                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Yang Tse (22 Aug 2008)
- Improved libcurl's internal curl_m*printf() functions integral data type
  size and signedness handling.

Daniel Fandrich (20 Aug 2008)
- Added an edited version of Vincent Le Normand's documentation of SFTP quote
  commands to the man pages.

Daniel Stenberg (20 Aug 2008)
- Phil Pellouchoud pointed out that the windows version of libcurl had a
  memory leak because it never called the OpenSSL function
  CRYPTO_cleanup_all_ex_data() as it was supposed to. This was because of a
  missing define in config-win32.h!

Gisle Vanem (18 Aug 2008)
- Updated lib/Makefile.Watcom with the option to use c-ares (USE_ARES=1).

Yang Tse (18 Aug 2008)
- Added test case 557 to verify libcurl's internal curl_m*printf() functions
  formatting functionality when handling signed and unsigned longs, as well as
  our curl_off_t data type.

Yang Tse (17 Aug 2008)
- OpenSSl enabled NetWare builds are changed to use the 'openssl' subdirectory
  when including the OpenSSL header files. This is the recommended setting, this
  prevents the undesired inclusion of header files with the same name as those
  of OpenSSL but which do not belong to the OpenSSL package. The visible change
  from previously released libcurl versions is that now OpenSSl enabled NetWare
  builds also define USE_OPENSSL in config files, and that OpenSSL header files
  must be located in a subdirectory named 'openssl'.

Yang Tse (16 Aug 2008)
- Library internal only C preprocessor macros FORMAT_OFF_T and FORMAT_OFF_TU
  remain in use as internal curl_off_t print formatting strings for the internal
  *printf functions which still cannot handle print formatting string directives
  such as "I64d", "I64u", and others available on MSVC, MinGW, Intel's ICC, and