@@ -10,6 +10,9 @@ Yang Tse (22 Aug 2008)
 - Improved libcurl's internal curl_m*printf() functions integral data type
   size and signedness handling.
 
+- Internal adjustments to better select/differentiate when large/small file
+  support is provided using WIN32 functions directly.
+
 Daniel Fandrich (20 Aug 2008)
 - Added an edited version of Vincent Le Normand's documentation of SFTP quote
   commands to the man pages.
